viewing and selecting data

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -301,18 +301,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# viewing and selecting data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "car_sals.hea"
+   ]
   }
  ],
  "metadata": {
