--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -309,11 +309,384 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>87899</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>32549</td>\n",
+       "      <td>3</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>11179</td>\n",
+       "      <td>5</td>\n",
+       "      <td>$22,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>213095</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$3,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>99213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>45698</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors       Price\n",
+       "0  Toyota  White         150043      4   $4,000.00\n",
+       "1   Honda    Red          87899      4   $5,000.00\n",
+       "2  Toyota   Blue          32549      3   $7,000.00\n",
+       "3     BMW  Black          11179      5  $22,000.00\n",
+       "4  Nissan  White         213095      4   $3,500.00\n",
+       "5  Toyota  Green          99213      4   $4,500.00\n",
+       "6   Honda   Blue          45698      4   $7,500.00"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>99213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>45698</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>54738</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$6,250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>31600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$9,700.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors      Price\n",
+       "5  Toyota  Green          99213      4  $4,500.00\n",
+       "6   Honda   Blue          45698      4  $7,500.00\n",
+       "7   Honda   Blue          54738      4  $7,000.00\n",
+       "8  Toyota  White          60000      4  $6,250.00\n",
+       "9  Nissan  White          31600      4  $9,700.00"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# .loc and .iloc\n",
+    "animals=pd.Series([\"cat\",\"dog\",\"bird\",\"panda\",\"snake\"],\n",
+    "                  index=[0,3,9,8,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      cat\n",
+       "3      dog\n",
+       "9     bird\n",
+       "8    panda\n",
+       "3    snake\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3      dog\n",
+       "3    snake\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animals.loc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bird'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animals.loc[9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Make                    BMW\n",
+       "Colour                Black\n",
+       "Odometer (KM)         11179\n",
+       "Doors                     5\n",
+       "Price            $22,000.00\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales.loc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'panda'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# iloc refers to position\n",
+    "animals.iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  loc refers to index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Toyota\n",
+       "1     Honda\n",
+       "2    Toyota\n",
+       "3       BMW\n",
+       "4    Nissan\n",
+       "5    Toyota\n",
+       "6     Honda\n",
+       "7     Honda\n",
+       "8    Toyota\n",
+       "9    Nissan\n",
+       "Name: Make, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales[\"Make\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "car_sals.hea"
+    "car_sales"
    ]
   }
  ],
