--- a/Panda.ipynb
+++ b/Panda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-0b82018841ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcar_sales\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-6-0b82018841ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcar_sales\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'car_sales' is not defined"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-507571900dd5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mseries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Odometer (KM)\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-507571900dd5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mseries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Odometer (KM)\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'Series' object is not callable"
      ]
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +313,163 @@
    ],
    "source": [
     "car_sales[\"Odometer (KM)\"].hist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# manipulating data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car_sales[\"Make\"]=car_sales[\"Make\"].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>honda</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>87899</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>toyota</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>32549</td>\n",
+       "      <td>3</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bmw</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>11179</td>\n",
+       "      <td>5</td>\n",
+       "      <td>$22,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>213095</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$3,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>toyota</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>99213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>45698</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>54738</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$6,250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>31600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$9,700.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors       Price\n",
+       "0  toyota  White         150043      4   $4,000.00\n",
+       "1   honda    Red          87899      4   $5,000.00\n",
+       "2  toyota   Blue          32549      3   $7,000.00\n",
+       "3     bmw  Black          11179      5  $22,000.00\n",
+       "4  nissan  White         213095      4   $3,500.00\n",
+       "5  toyota  Green          99213      4   $4,500.00\n",
+       "6   honda   Blue          45698      4   $7,500.00\n",
+       "7   honda   Blue          54738      4   $7,000.00\n",
+       "8  toyota  White          60000      4   $6,250.00\n",
+       "9  nissan  White          31600      4   $9,700.00"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales"
    ]
   },
   {
